Addition of css fix for medbay buttons

--- a/nicetranslady-ui/Pages/MedBay/Index.cshtml
+++ b/nicetranslady-ui/Pages/MedBay/Index.cshtml
@@ -3,4 +3,74 @@
 @{
 }
 
-Helloooooooo
+<!-- App Container -->
+<div class="container">
+    <div id="nav" hidden>
+        <nav>
+            <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                <a class="nav-link active" id="nav-file-tab" data-toggle="tab" href="#nav-file" role="tab" aria-controls="nav-file" aria-selected="true">
+                    File Details
+                </a>
+                <a class="nav-link" id="nav-problems-tab" data-toggle="tab" href="#nav-problems" role="tab" aria-controls="nav-problems" aria-selected="false">
+                    Problems <span class="badge badge-light">0</span>
+                </a>
+                <a class="nav-link" id="nav-medications-tab" data-toggle="tab" href="#nav-medications" role="tab" aria-controls="nav-medications" aria-selected="false">
+                    Medications <span class="badge badge-light">0</span>
+                </a>
+                <a class="nav-link" id="nav-testResults-tab" data-toggle="tab" href="#nav-testResults" role="tab" aria-controls="nav-testResults" aria-selected="false">
+                    Test Results <span class="badge badge-light">0</span>
+                </a>
+                <a class="nav-link" id="nav-consultations-tab" data-toggle="tab" href="#nav-consultations" role="tab" aria-controls="nav-consultations" aria-selected="false">
+                    Consultations <span class="badge badge-light">0</span>
+                </a>
+                <a class="nav-link" id="nav-immunisations-tab" data-toggle="tab" href="#nav-immunisations" role="tab" aria-controls="nav-immunisations" aria-selected="false">
+                    Immunisations <span class="badge badge-light">0</span>
+                </a>
+                <a class="nav-link" id="nav-allergies-tab" data-toggle="tab" href="#nav-allergies" role="tab" aria-controls="nav-allergies" aria-selected="false">
+                    Allergies <span class="badge badge-light">0</span>
+                </a>
+            </div>
+        </nav>
+        <div class="tab-content" id="nav-tabContent">
+            <div class="tab-pane fade show active" id="nav-file" role="tabpanel" aria-labelledby="nav-file-tab">
+                <p>&nbsp;</p>
+                <h4>No Data</h4>
+            </div>
+            <div class="tab-pane fade" id="nav-problems" role="tabpanel" aria-labelledby="nav-problems-tab">
+                <p>&nbsp;</p>
+                <h4>No Data</h4>
+            </div>
+            <div class="tab-pane fade" id="nav-medications" role="tabpanel" aria-labelledby="nav-medications-tab">
+                <p>&nbsp;</p>
+                <h4>No Data</h4>
+            </div>
+            <div class="tab-pane fade" id="nav-testResults" role="tabpanel" aria-labelledby="nav-testResults-tab">
+                <p>&nbsp;</p>
+                <h4>No Data</h4>
+            </div>
+            <div class="tab-pane fade" id="nav-consultations" role="tabpanel" aria-labelledby="nav-consultations-tab">
+                <p>&nbsp;</p>
+                <h4>No Data</h4>
+            </div>
+            <div class="tab-pane fade" id="nav-immunisations" role="tabpanel" aria-labelledby="nav-immunisations-tab">
+                <p>&nbsp;</p>
+                <h4>No Data</h4>
+            </div>
+            <div class="tab-pane fade" id="nav-allergies" role="tabpanel" aria-labelledby="nav-allergies-tab">
+                <p>&nbsp;</p>
+                <h4>No Data</h4>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Choose file -->
+<div class="container" id="getFileBox">
+    <div class="row">
+        <div>
+            <p>To open a file, click the Choose File button below. Choose a JSON file that has been exported from Patient Access.</p>
+            <p>No data is transmitted in any way. All processing takes place within this browser. This page has been delivered securely, as you can tell from the padlock symbol in your browser. No data will leave your computer, no internet servers are utilised to process the data.</p>
+            <p>Source code for this page app can be found and viewed on GitHub (nicetranslady/MedBay), for further verification if required.</p>
+            <div id="getFile"></div>
+        </div>
+    </div>
+</div>
