--- a/nicetranslady-ui/Pages/Shared/_Layout.cshtml
+++ b/nicetranslady-ui/Pages/Shared/_Layout.cshtml
@@ -17,7 +17,6 @@
                     'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
         })(window, document, 'script', 'dataLayer', 'GTM-MW667S3');</script>
     <!-- End Google Tag Manager -->
-
     <!-- Pre-Load -->
     <!-- Google Fonts -->
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap" as="style" />
@@ -57,6 +56,13 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/favicon_apple_180.png" type="image/png" />
     <link rel="apple-touch-icon" sizes="228x228" href="/images/favicon/favicon_apple_228.png" type="image/png" />
     <!-- link rel="mask-icon" href="your_icon.svg" -->
+
+    <!-- Load required js -->
+    <script type="text/javascript" src="/js/medbay.js"></script>
+    <!-- p5js -->
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
+    @*<script>startup();</script>*@
+
 </head>
 <body>
     <!-- All of this should be in a Google BODY-TOP file -->
