Put logic in for script loading

--- a/nicetranslady-ui/Pages/MedBay/Index.cshtml
+++ b/nicetranslady-ui/Pages/MedBay/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model nicetranslady.ui.Pages.MedBay.IndexModel
 @{
+    ViewData["Title"] = "nicetranslady | MedBay - an app to format Patient Access export files";
 }
 
 <!-- Breadcrumb -->
@@ -91,7 +92,7 @@
             <p>In Patient Access, choose export data ans then select JSON file.</p>
             <p>To open a file to format, click the Choose File button below. Choose a JSON file that has been exported from Patient Access.</p>
             <div id="getFile" style="height: 66px; text-align: center"></div>
-            <p>This tool completes all of its processing within this browser using JavaScript. No data is transmitted by this app. Tho ensure this app has been delivered securely, check for the padlock symbol in your browser.</p>
+            <p>This tool completes all of its processing within this browser using JavaScript. No data is transmitted by this app. To ensure this app has been delivered securely, check for the padlock symbol in your browser.</p>
             <p>Source code for this page app can be found and viewed on GitHub (nicetranslady/nicetranslady-ui), for further verification if required.</p>
         </div>
     </div>
