Cleaned up MedBay and created partial for end of body scripts

--- a/nicetranslady-ui/Pages/MedBay/Index.cshtml
+++ b/nicetranslady-ui/Pages/MedBay/Index.cshtml
@@ -45,7 +45,7 @@
                 </a>
             </div>
         </nav>
-        <div class="tab-content" id="nav-tabContent">
+        <div class="tab-content" id="nav-tabContent" style="margin-bottom: 16px">
             <div class="tab-pane fade show active" id="nav-file" role="tabpanel" aria-labelledby="nav-file-tab" style="background-color: lightpink">
                 <p>&nbsp;</p>
                 <h4>&nbsp;&nbsp;No Data</h4>
@@ -86,14 +86,14 @@
 </div>
 <!-- Choose file -->
 <div class="container" id="getFileBox">
-    <div class="row">
-        <div>
-            <p>This tool will allow you to open an export file from Patient Access, in the JSON format.</p>
-            <p>In Patient Access, choose export data ans then select JSON file.</p>
+    @*<div class="row">
+        <div>*@
+            <p>This tool will allow you to open an export file from Patient Access and view the contents in an understandable format</p>
+            <p>In Patient Access, choose export data and then select JSON file. Or if someone is going to share their results with you, get them to export in the JSON format.</p>
             <p>To open a file to format, click the Choose File button below. Choose a JSON file that has been exported from Patient Access.</p>
             <div id="getFile" style="height: 66px; text-align: center"></div>
             <p>This tool completes all of its processing within this browser using JavaScript. No data is transmitted by this app. To ensure this app has been delivered securely, check for the padlock symbol in your browser.</p>
-            <p>Source code for this page app can be found and viewed on GitHub (nicetranslady/nicetranslady-ui), for further verification if required.</p>
-        </div>
-    </div>
+            <p>Source code for this page app can be found and viewed on GitHub (nicetranslady/nicetranslady-ui).</p>
+        @*</div>
+    </div>*@
 </div>
