--- a/nicetranslady-ui/Pages/Shared/_Layout.cshtml
+++ b/nicetranslady-ui/Pages/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <meta name="description" content="About nicetranslady and links to her social media accounts. nicetranslady is a nice trans lady that is navigating life as an out (and transitioning) trans person. She's a geeky nerd and probably needs a hug.">
     <title>@ViewBag.Title</title>
     <link rel="canonical" href="https://nicetranslady.online/" />
+    @*@await Html.PartialAsync("_ValidationScriptsPartial")*@
 
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
@@ -63,13 +64,13 @@
         <script type="text/javascript" src="/js/medbay.js"></script>
         <!-- p5js -->
         <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
-        }
+    }
     }
     <!-- END OF MedBay -->
 
 </head>
 <body>
-    <!-- All of this should be in a Google BODY-TOP file -->
+    <!-- All of this should be in a GOOGLE BODY-TOP file -->
     <!-- Google Tag Manager (noscript) -->
     <noscript>
         <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MW667S3"
@@ -95,11 +96,11 @@
     <script async src="https://www.googleoptimize.com/optimize.js?id=OPT-5VMLW66"></script>
 
     <script>/**
-        * Function that registers a click on an outbound link in Analytics.
-        * This function takes a valid URL string as an argument, and uses that URL string
-        * as the event label. Setting the transport method to 'beacon' lets the hit be sent
-        * using 'navigator.sendBeacon' in browser that support it.
-        */
+                        * Function that registers a click on an outbound link in Analytics.
+                        * This function takes a valid URL string as an argument, and uses that URL string
+                        * as the event label. Setting the transport method to 'beacon' lets the hit be sent
+                        * using 'navigator.sendBeacon' in browser that support it.
+                        */
         var getOutboundLink = function (url) {
             gtag('event', 'click', {
                 'event_category': 'outbound',
@@ -111,9 +112,7 @@
 
     <!-- Google AdSense -->
     <script data-ad-client="ca-pub-8497649303349192" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <!-- END OF GOOGLE BODY-TP -->
-
-
+    <!-- END OF GOOGLE BODY-TOP -->
     <!-- Header -->
     <header>
         <!-- Banner -->
@@ -133,17 +132,61 @@
     </main>
 
     <!-- Footer -->
-    <footer class="border-top text-muted">
-        <div class="container">
-            <div style="text-align: center">
-                &copy;&nbsp;2020&nbsp;-&nbsp;nicetranslady<!-- | <a asp-area="" asp-page="/Privacy">Privacy</a> -->
+    <footer>
+        @* Icons *@
+        @{
+            var SocialMediaCompanies = new List<SocialMediaCompany>
+        {
+            new SocialMediaCompany {Name = "Twitch", HomeURL = "https://www.twitch.tv/nicetranslady", Prefix = "twitch" },
+            new SocialMediaCompany {Name = "Discord", HomeURL = "https://discord.gg/6XgZYdv", Prefix = "discord" },
+            new SocialMediaCompany {Name = "Twitter", HomeURL = "https://twitter.com/nicetranslady", Prefix = "twitter" },
+            new SocialMediaCompany {Name = "Instagram", HomeURL = "https://instagram.com/nicetranslady", Prefix = "instagram" },
+            new SocialMediaCompany {Name = "Facebook", HomeURL = "https://facebook.com/nicetranslady", Prefix = "facebook" },
+            new SocialMediaCompany {Name = "Steam", HomeURL = "https://steamcommunity.com/profiles/76561199034457152", Prefix = "steam" },
+            new SocialMediaCompany {Name = "YouTube", HomeURL = "https://www.youtube.com/channel/UCt1TRJ8INljw-8ouamS0fwg", Prefix = "youtube" },
+            new SocialMediaCompany {Name = "Patreon", HomeURL = "https://www.patreon.com/nicetranslady", Prefix = "patreon" },
+            new SocialMediaCompany {Name = "Blogger", HomeURL = "https://blog.nicetranslady.online", Prefix = "blogger" },
+            new SocialMediaCompany {Name = "Amazon", HomeURL = "https://www.amazon.co.uk/hz/wishlist/ls/21B3NNZDQ9TK2?ref_=wl_share", Prefix = "amazon" },
+            new SocialMediaCompany {Name = "OnlyFans", HomeURL = "https://onlyfans.com/nicetranslady", Prefix = "onlyfans" },
+            new SocialMediaCompany {Name = "PayPal", HomeURL = "https://paypal.me/nicetranslady", Prefix = "paypal" },
+            new SocialMediaCompany {Name = "CuriousCat", HomeURL = "https://curiouscat.me/nicetranslady", Prefix = "curiouscat" },
+            new SocialMediaCompany {Name = "GitHub", HomeURL = "https://github.com/nicetranslady", Prefix = "github" }
+        };
+        }
+
+        <div class="container" style="text-align: center">
+            <div class="socialMedia-icons">
+                @foreach (var SocialMediaCompany in SocialMediaCompanies)
+                {
+                    <div>
+                        <button onclick="window.open('@SocialMediaCompany.HomeURL', '_blank')">
+                            <img class="button-icon"
+                                 src="/images/social_media/160_160/@(SocialMediaCompany.Prefix)_black.png"
+                                 alt="@SocialMediaCompany.Name"
+                                 onMouseOver="this.src='/images/social_media/160_160/@(SocialMediaCompany.Prefix)_white.png';"
+                                 onMouseOut="this.src='/images/social_media/160_160/@(SocialMediaCompany.Prefix)_black.png';"
+                                 onclick="getOutboundLink('@SocialMediaCompany.HomeURL'); return false;" />
+                        </button>
+                    </div>
+                }
+            </div>
+        </div>
+
+        <div>&nbsp;</div>
+
+        <!-- Copyright and Privacy -->
+        <div class="border-top text-muted">
+            <div class="container">
+                <div style="text-align: center">
+                    &copy;&nbsp;@System.DateTime.Now.Year&nbsp;-&nbsp;nicetranslady<!-- | <a asp-area="" asp-page="/Privacy">Privacy</a> -->
+                </div>
             </div>
         </div>
     </footer>
 
     <!-- Load Scripts -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+    <partial name="_ValidationScriptsPartial" />
+
+    @*@RenderSection("Scripts", required: false)*@
 </body>
 </html>
