--- a/nicetranslady-ui/Pages/Shared/_Layout.cshtml
+++ b/nicetranslady-ui/Pages/Shared/_Layout.cshtml
@@ -6,124 +6,33 @@
     <meta name="description" content="About nicetranslady and links to her social media accounts. nicetranslady is a nice trans lady that is navigating life as an out (and transitioning) trans person. She's a geeky nerd and probably needs a hug.">
     <title>@ViewBag.Title</title>
     <link rel="canonical" href="https://nicetranslady.online/" />
-    @*@await Html.PartialAsync("_ValidationScriptsPartial")*@
 
-    <!-- Google Tag Manager -->
-    <script>(function (w, d, s, l, i) {
-            w[l] = w[l] || []; w[l].push({
-                'gtm.start':
-                    new Date().getTime(), event: 'gtm.js'
-            }); var f = d.getElementsByTagName(s)[0],
-                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-        })(window, document, 'script', 'dataLayer', 'GTM-MW667S3');</script>
-    <!-- End Google Tag Manager -->
-    <!-- Pre-Load -->
-    <!-- Google Fonts -->
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap" as="style" />
-    <!-- Bootstrap CSS -->
-    <link rel="preload" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" as="style" />
-    <!-- nicetranslady site -->
-    <link rel="preload" rel="stylesheet" href="~/css/nicetranslady.css" as="style" />
+    <!-- Scripts and Tags -->
+    <partial name="_LayoutScriptsPartial" />
 
-    <!-- Load -->
-    <!-- Google Fonts -->
-    <link rel="stylesheet" async href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap" />
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
-    <!-- nicetranslady site -->
-    <link rel="stylesheet" href="~/css/nicetranslady.css" />
+    <!-- favicons -->
+    <partial name="_LayoutFavIconPartial" />
 
-    <!-- links for icons -->
-    <link rel="icon" sizes="16x16" href="/images/favicon/favicon_16.png" type="image/png" />
-    <link rel="icon" sizes="32x32" href="/images/favicon/favicon_32.png" type="image/png" />
-    <link rel="icon" sizes="48x48" href="/images/favicon/favicon_48.png" type="image/png" />
-    <link rel="icon" sizes="96x96" href="/images/favicon/favicon_96.png" type="image/png" />
-    <link rel="icon" sizes="76x76" href="/images/favicon/favicon_76.png" type="image/png" />
-    <link rel="icon" sizes="128x128" href="/images/favicon/favicon_128.png" type="image/png" />
-    <link rel="icon" sizes="192x192" href="/images/favicon/favicon_192.png" type="image/png" />
-    <link rel="icon" sizes="228x228" href="/images/favicon/favicon_228.png" type="image/png" />
-    <link rel="shortcut icon" sizes="32x32" href="/images/favicon/favicon_32.png" type="image/png" />
-    <link rel="shortcut icon" sizes="196x196" href="/images/favicon/favicon_196.png" type="image/png" />
-    <link rel="apple-touch-icon" sizes="40x40" href="/images/favicon/favicon_apple_40.png" type="image/png" />
-    <link rel="apple-touch-icon" sizes="57x57" href="/images/favicon/favicon_apple_57.png" type="image/png" />
-    <link rel="apple-touch-icon" sizes="58x58" href="/images/favicon/favicon_apple_58.png" type="image/png" />
-    <link rel="apple-touch-icon" sizes="60x60" href="/images/favicon/favicon_apple_60.png" type="image/png" />
-    <link rel="apple-touch-icon" sizes="76x76" href="/images/favicon/favicon_apple_76.png" type="image/png" />
-    <link rel="apple-touch-icon" sizes="80x80" href="/images/favicon/favicon_apple_80.png" type="image/png" />
-    <link rel="apple-touch-icon" sizes="120x120" href="/images/favicon/favicon_apple_120.png" type="image/png" />
-    <link rel="apple-touch-icon" sizes="152x152" href="/images/favicon/favicon_apple_152.png" type="image/png" />
-    <link rel="apple-touch-icon" sizes="167x167" href="/images/favicon/favicon_apple_167.png" type="image/png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/favicon_apple_180.png" type="image/png" />
-    <link rel="apple-touch-icon" sizes="228x228" href="/images/favicon/favicon_apple_228.png" type="image/png" />
-    <!-- link rel="mask-icon" href="your_icon.svg" -->
-    <!-- MedBay -->
-    {@if (ViewBag.Title.StartsWith("nicetranslady | MedBay"))
+    <!-- Load Scripts required for MedBay -->
+    @if (ViewBag.Title.StartsWith("nicetranslady | MedBay"))
     {
-        <!-- Load required js -->
-        <script type="text/javascript" src="/js/medbay.js"></script>
-        <!-- p5js -->
-        <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
+        <partial name="_LayoutAppMedBayPartial" />
     }
+
+    <!-- Load Scripts required for MedBay -->
+    @if (ViewBag.Title.StartsWith("nicetranslady | QuizTime"))
+    {
+        <partial name="_LayoutAppQuizTimePartial" />
     }
-    <!-- END OF MedBay -->
 
 </head>
 <body>
-    <!-- All of this should be in a GOOGLE BODY-TOP file -->
-    <!-- Google Tag Manager (noscript) -->
-    <noscript>
-        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MW667S3"
-                height="0" width="0" style="display:none;visibility:hidden"></iframe>
-    </noscript>
-    <!-- End Google Tag Manager (noscript) -->
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-176693214-1"></script>
-    <script>window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
+    <!-- Body Top Scripts and Tags -->
+    <partial name="_LayoutBodyTopPartial" />
 
-        gtag('config', 'UA-176693214-1');</script>
-
-    <!-- Load `web-vitals` using a module script. -->
-    <script type="module">import { getCLS, getFID, getLCP } from 'https://unpkg.com/web-vitals@0.2.4/dist/web-vitals.es5.min.js?module';
-
-        getCLS(console.log);
-        getFID(console.log);
-        getLCP(console.log);</script>
-
-    <!-- Google Optimize Snippet -->
-    <script async src="https://www.googleoptimize.com/optimize.js?id=OPT-5VMLW66"></script>
-
-    <script>/**
-                        * Function that registers a click on an outbound link in Analytics.
-                        * This function takes a valid URL string as an argument, and uses that URL string
-                        * as the event label. Setting the transport method to 'beacon' lets the hit be sent
-                        * using 'navigator.sendBeacon' in browser that support it.
-                        */
-        var getOutboundLink = function (url) {
-            gtag('event', 'click', {
-                'event_category': 'outbound',
-                'event_label': url,
-                'transport_type': 'beacon',
-                //'event_callback': function(){document.location = url;} - Commented out as we do not want the event to update the current page
-            });
-        }</script>
-
-    <!-- Google AdSense -->
-    <script data-ad-client="ca-pub-8497649303349192" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <!-- END OF GOOGLE BODY-TOP -->
     <!-- Header -->
     <header>
-        <!-- Banner -->
-        <div class="header-placeholder">
-            <div class="header-img">
-                &nbsp;
-            </div>
-            <div class="header-text">
-                &nbsp;
-            </div>
-        </div>
+        <partial name="_LayoutBannerPartial" />
     </header>
 
     <!-- Main -->
@@ -133,55 +42,7 @@
 
     <!-- Footer -->
     <footer>
-        @* Icons *@
-        @{
-            var SocialMediaCompanies = new List<SocialMediaCompany>
-        {
-            new SocialMediaCompany {Name = "Twitch", HomeURL = "https://www.twitch.tv/nicetranslady", Prefix = "twitch" },
-            new SocialMediaCompany {Name = "Discord", HomeURL = "https://discord.gg/6XgZYdv", Prefix = "discord" },
-            new SocialMediaCompany {Name = "Twitter", HomeURL = "https://twitter.com/nicetranslady", Prefix = "twitter" },
-            new SocialMediaCompany {Name = "Instagram", HomeURL = "https://instagram.com/nicetranslady", Prefix = "instagram" },
-            new SocialMediaCompany {Name = "Facebook", HomeURL = "https://facebook.com/nicetranslady", Prefix = "facebook" },
-            new SocialMediaCompany {Name = "Steam", HomeURL = "https://steamcommunity.com/profiles/76561199034457152", Prefix = "steam" },
-            new SocialMediaCompany {Name = "YouTube", HomeURL = "https://www.youtube.com/channel/UCt1TRJ8INljw-8ouamS0fwg", Prefix = "youtube" },
-            new SocialMediaCompany {Name = "Patreon", HomeURL = "https://www.patreon.com/nicetranslady", Prefix = "patreon" },
-            new SocialMediaCompany {Name = "Blogger", HomeURL = "https://blog.nicetranslady.online", Prefix = "blogger" },
-            new SocialMediaCompany {Name = "Amazon", HomeURL = "https://www.amazon.co.uk/hz/wishlist/ls/21B3NNZDQ9TK2?ref_=wl_share", Prefix = "amazon" },
-            new SocialMediaCompany {Name = "OnlyFans", HomeURL = "https://onlyfans.com/nicetranslady", Prefix = "onlyfans" },
-            new SocialMediaCompany {Name = "PayPal", HomeURL = "https://paypal.me/nicetranslady", Prefix = "paypal" },
-            new SocialMediaCompany {Name = "CuriousCat", HomeURL = "https://curiouscat.me/nicetranslady", Prefix = "curiouscat" },
-            new SocialMediaCompany {Name = "GitHub", HomeURL = "https://github.com/nicetranslady", Prefix = "github" }
-        };
-        }
-
-        <div class="container" style="text-align: center">
-            <div class="socialMedia-icons">
-                @foreach (var SocialMediaCompany in SocialMediaCompanies)
-                {
-                    <div>
-                        <button onclick="window.open('@SocialMediaCompany.HomeURL', '_blank')">
-                            <img class="button-icon"
-                                 src="/images/social_media/160_160/@(SocialMediaCompany.Prefix)_black.png"
-                                 alt="@SocialMediaCompany.Name"
-                                 onMouseOver="this.src='/images/social_media/160_160/@(SocialMediaCompany.Prefix)_white.png';"
-                                 onMouseOut="this.src='/images/social_media/160_160/@(SocialMediaCompany.Prefix)_black.png';"
-                                 onclick="getOutboundLink('@SocialMediaCompany.HomeURL'); return false;" />
-                        </button>
-                    </div>
-                }
-            </div>
-        </div>
-
-        <div>&nbsp;</div>
-
-        <!-- Copyright and Privacy -->
-        <div class="border-top text-muted">
-            <div class="container">
-                <div style="text-align: center">
-                    &copy;&nbsp;@System.DateTime.Now.Year&nbsp;-&nbsp;nicetranslady<!-- | <a asp-area="" asp-page="/Privacy">Privacy</a> -->
-                </div>
-            </div>
-        </div>
+        <partial name="_LayoutFooterPartial" />
     </footer>
 
     <!-- Load Scripts -->
